--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,37 @@
 <link rel="stylesheet" href="/css/style.css">
 <script src="js/jquery-1.10.1.js"></script>
 </head>
+<header>
+  <h1 class="title">It's about the company you keep...... </h1>
+<nav>
+  <div class="btn-group btn-group-vertical">
+  <button class="brand"><a href="/">Home</a></button>
+  <button class="JK"><a href="/add">Add a friend</a></button>
+  <a href="/friendlist">View friends</a>
+  </div>
+  <a href="/friendlist">View friends</a>
+  <a href="/about">About Us</a>
+  <a href="/faq">FAQ</a>
+</nav>
+</header>
+<p></p>
+<p></p>
+<p></p>
 <body>
 <%= yield %>
 </body>
 </html>
+
+ <!--
+  <header>
+    <h1>Task Manager. Organise and Resist! </h1>
+    <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/tasklist">Tasks List</a></li>
+      <li><a href="/about">About Us</a></li>
+      <li><a href="/faq">FAQ</a></li>
+    </ul>
+  </nav>
+  </header>
+  -->
